Fix grid overflow

--- a/styles/default.css
+++ b/styles/default.css
@@ -160,7 +160,7 @@
 
 .frhdGrid.autoColumns {
 	align-items: baseline;
-	grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
 .frhdGrid.autoColumns > * {
